src/tests/e2e/snapshots/zellij__tests__e2e__cases__toggle_floating_panes.snap
---
source: src/tests/e2e/cases.rs
assertion_line: 2049
expression: last_snapshot
---
 Zellij (e2e-test)  Tab #1                                                                     Alt <[]>  STAGGERED 
┌ Pane #1 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│$                                                                                                                     │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                             ┌ Pane #2 ──────────────────────────────────────── PIN [ ] ┐                             │
│                             │$ █                                                       │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             └──────────────────────────────────────────────────────────┘                             │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT       ... 
